# autodialectics

./: .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  opencode.json  pyproject.toml  test.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.github/workflows/: ci.yml
.opencode/agents/: autodialectics-review.md
.opencode/commands/: autodialectics-benchmark.md  autodialectics-run.md
.opencode/plugins/: autodialectics.js
autodialectics/: settings.py
autodialectics/api/: app.py
autodialectics/cli/: main.py
autodialectics/contract/: compiler.py
autodialectics/dialectic/: engine.py
autodialectics/evaluation/: pre_mortem.py  slop.py
autodialectics/evolution/: gepa_optimizer.py
autodialectics/execution/: adapters.py  base.py
autodialectics/exploration/: rlm_explorer.py
autodialectics/integrations/: __init__.py  mcp_server.py
autodialectics/memory/: manager.py
autodialectics/routing/: claude_gateway.py  (+3 more)
configs/: autodialectics.example.yaml
docs/: ai-plugin-integrations.md  architecture.md  cliproxy_sdk_extension.md  linear_handoff_2026-03-26.md  overnight_agent_prompt_pre_mortem_router.md  reference_flow.md
scripts/: validate_ai_integrations.py
tests/: conftest.py  test_api.py  test_autopilot.py  test_benchmark.py  test_claude_gateway.py  test_cli_gateway.py  test_code_execution.py  test_codex_gateway.py  test_contract.py  test_dialectic_engine.py  test_evaluation_parser_gap.py  test_integrations.py  test_mcp_server.py  test_model_client.py  test_pre_mortem.py  test_runtime.py  test_settings.py  test_slop.py
(+40 files in other folders)
