[project]
name = "autodialectics"
version = "0.1.0"
description = "Agentic harness for keeping LLMs on-task with contracts, evidence, dialectics, verification, and anti-slop gates"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "typer>=0.15",
    "httpx>=0.28",
    "rich>=13",
    "click>=8",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dspy = ["dspy-ai>=2.5"]
dev = ["pytest>=8", "pytest-asyncio>=0.25"]

[project.scripts]
autodialectics = "autodialectics.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autodialectics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: optional live integration tests that require local services",
]
